--- a/website/src/main/resources/website/entrynotfound.hbs
+++ b/website/src/main/resources/website/entrynotfound.hbs
@@ -1,15 +1,7 @@
 <!-- Header -->
 {{> header }}
 
-<section id="searchform">
-	<div class="search jumbotron" id="home-banner">
-			<div class="container" align="center">
-				<p>{{message "lang.jumbotron1"}} <span class="pri-color">10,000</span> {{message "lang.jumbotron2"}}</p>
-		        {{> searchcomponent }} 
-		    </div>
-	</div>
-	<!-- /Search -->
-</section>
+{{> searchform }}
 
 <section>
 	<main>
