--- a/website/src/main/resources/website/error.hbs
+++ b/website/src/main/resources/website/error.hbs
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+{{> header }}
 
-<head>
-    {{> header }}
-</head>
+<section class="container">
+   <div class="row">
+      Default error page
+   	 
+   </div>
+</section>
 
-<body>
-Default error page
-</body>
-</html>
+{{> footer }}
