--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -1,16 +1,7 @@
 <!-- Header -->
 {{> header }}
 
-<section id="searchform">
-    <div class="jumbotron" id="home-banner">
-       <div class="container">
-       		<h1>{{message "lang.jumbotron1"}} <span>10,000</span> {{message "lang.jumbotron2"}}</h1>
-            {{> searchcomponent }}
-            <!--h3>{{message "lang.jumboh31"}}</h3>
-            <a href="/submitname" class="btn btn-lg btn-link">{{message "lang.jumboh32"}}</a-->
-       </div>
-    </div>
-</section>
+{{> searchform }}
 
 <!-- main-content -->
 
@@ -77,7 +68,7 @@
 
 		<h4>Join our amazing team<h4>
 		<p class="lead">Cras mattis consectetur purus sit amet fermentum. Maecenas faucibus mollis interdum.</p>
-		<a class="btn btn-lg btn-success">Volunteer</a>
+		<a class="btn btn-lg btn-success" href="/volunteer">Volunteer</a>
 
        </div>
      </div>
