--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -9,6 +9,7 @@
 <link href="/assets/css/jquery-ui.min.css" rel="stylesheet">
 <link href="/assets/css/keyboard.css" rel="stylesheet">
 <link href="/assets/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="/assets/css/overwrite.css" rel="stylesheet">
 <script type="text/javascript" src="http://fast.fonts.net/jsapi/6dc70f84-e724-4068-9f7a-797b1bf01ddb.js"></script>
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -58,8 +59,8 @@
                         <!--li><a href="/">{{message "lang.home"}}</a></li-->
                         <li><a href="/about-us">{{message "lang.about"}}</a></li>
                         <li><a href="/volunteer">{{message "lang.volunteer"}}</a></li>
-                        <li><a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story">{{message "lang.donate"}}</a></li>
-                        <li><a href="http://blog.yorubaname.com">{{message "lang.blog"}}</a></li>
+                        <li><a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story" target="_blank">{{message "lang.donate"}}</a></li>
+                        <li><a href="http://blog.yorubaname.com" target="_blank">{{message "lang.blog"}}</a></li>
                         <!--li><a href="/login">{{message "lang.logreg"}}</a></li-->
                         <li><a href="/contact-us">{{message "lang.contact"}}</a></li>
                     </ul>
