--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -1,116 +1,83 @@
 <!-- Header -->
 {{> header }}
 
-<section id="searchform">
-	<div class="search jumbotron" id="home-banner">
-			<div class="container" align="center">
-				<p>{{message "lang.jumbotron1"}} <span class="pri-color">10,000</span> {{message "lang.jumbotron2"}}</p>
-		        {{> searchcomponent }} 
-		    </div>
-	</div>
-</section>
-<!-- /Search -->
+{{> searchform }}
 
 <!-- main-content -->
 <section id="content">
 	<div class="container">
 		<div class="row">
-			<main>
-				<div class="col-md-8">
-					<div class="well">
-						<div class="row">
-							<div class="col-sm-8">
-								<h2 class="name">
-								<span id="name-entry">{{ name.name }}</span>
-								<button class="name-sound" id="tts-button">
-									<i class="fa fa-volume-up" data-toggle="tooltip" data-placement="top" title="{{message "lang.play-sound"}}"></i>
-								</button>
-								</h2>										
-								<p>{{message "lang.pronounciation"}} {{ name.pronunciation}}</p>
-							</div>
-							<div class="col-sm-4 small">
-								<div class="name-s-col">
-									<a href="#">
-										{{message "lang.share"}} <i class="fa fa-share-alt"></i>
-									</a>
-								</div>
-								<div class="name-s-col">
-									<a href="#/improve-entry" data-toggle="modal" data-target="#improveEntryModal">
-										{{message "lang.improve-entry"}} <i class="fa fa-pencil"></i>
-									</a>
-								</div>
-							</div>
-						</div>			
-						<hr>
-						<p class="small">{{message "lang.submitby"}} {{ name.submittedBy }}</p>			
-					</div>
+				<div class="col-sm-8">
+				   <h2>{{ name.name }}
+						<button class="btn btn-default btn-sm" id="tts-button">
+							<i class="fa fa-volume-up" data-toggle="tooltip" data-placement="top" title="{{message "lang.play-sound"}}"></i>
+						</button>
+					</h2>										
+					
+					<p>{{message "lang.pronounciation"}} {{ name.pronunciation}}</p>
+					
 
-					<div class="well">
-						<h4 class="name">{{message "lang.meaningof"}} {{ name.name }}</h4>
+							
+						<a class="btn btn-sm btn-default">
+							{{message "lang.share"}} <i class="fa fa-share-alt"></i>
+						</a>
+
+						<a class="btn btn-sm btn-default" href="#/improve-entry" data-toggle="modal" data-target="#improveEntryModal">
+							{{message "lang.improve-entry"}} <i class="fa fa-pencil"></i>
+						</a>
+								
+								
 						<hr>
-						<p class="meaning">{{ name.meaning }}</p><br><br>
-						<h5 class="name">{{message "lang.extendedmeaningof"}}</h5>
+						<p>{{message "lang.submitby"}} {{ name.submittedBy }}</p>			
+					
+
+					
+						<h4>{{message "lang.meaningof"}} {{ name.name }}</h4>
+						<hr>
+						<p>{{ name.meaning }}</p>
+
+						<h4>{{message "lang.extendedmeaningof"}}</h4>
 						<hr>
 						<p>{{name.extendedMeaning }}</p>
-					</div>
+					
 					<!-- /meaning of name -->
 
-					<div class="well">
-						<h4 class="name">{{message "lang.morphology"}}</h4>
+						<h4>{{message "lang.morphology"}}</h4>
 						<hr>
 						<p>{{name.morphology}}</p>
-					</div>
+					
 					<!-- /morphology -->
 
-					<div class="well">
-						<h4 class="name">{{message "lang.etymology"}}</h4>
+					
+						<h4>{{message "lang.etymology"}}</h4>
 						<hr>
-			            <div class="row">
-			                {{#each name.etymology}}
-			                        <span>{{this.part}}</span><span> - ({{this.meaning}})</span>
-							{{/each}}
-			            </div>
-					</div>
+			            
+			            {{#each name.etymology}}
+			               <strong>{{this.part}}</strong><span> - {{this.meaning}}</span><br>
+						{{/each}}
+			            
+					
 					<!-- /etymology -->
 
-					<div class="well">
-						<h4 class="name">{{message "lang.geolocation"}}</h4>
+					
+						<h4>{{message "lang.geolocation"}}</h4>
 						<hr>
 						<p>{{message "lang.commonin"}} {{name.geoLocation.place}}</p>
-					</div>
+					
 					<!-- /geolocation -->
 
-					<div class="well">
-						<h4 class="name">{{message "lang.variants"}}</h4>
+					
+						<h4>{{message "lang.variants"}}</h4>
 						<hr>
-					</div>
+					
 					<!-- /variants -->
 
-					<div class="well">
-						<h4 class="name">{{message "lang.see-also"}}</h4>
+					
+						<h4>{{message "lang.see-also"}}</h4>
 						<hr>
-					</div>
+					
 					<!-- /see also -->
-				</div>
-
-				<!--Improve Entry Modal -->
-				<div class="modal fade" id="improveEntryModal" role="dialog">
-					<div class="modal-dialog">
-						<div class="well">
-							<form id="improveEntry">
-								<div class="form-group">
-			                		<h3 class="name">{{message "lang.improve-entry.help-us"}} "{{ name.name }}"</h3>
-			                		<p class="small">{{message "lang.improve-entry.sub-text"}}</p>
-			                		<textarea name="improveEntry" id="improveEntry" class="form-control" rows="5"></textarea>                		
-			            		</div>
-			            		<button type="submit" id="submitEntry" class="btn btn-info btn-lg">Submit Entry</button>
-			            		&nbsp;&nbsp;&nbsp;&nbsp;<a href="#/entries/{nameEntry}" data-dismiss="modal">Cancel</a>
-							</form>
-						</div>
-					</div>
-				</div>
-				<!--/Improve Entry Modal -->
-			</main>
+				</div>			
 
 			<!-- sidebar -->
 			<aside>
@@ -123,6 +90,26 @@
 	</div>
 </section>
 <!-- /main-content -->
+
+<!--Improve Entry Modal -->
+<div class="modal fade" id="improveEntryModal" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+		    <div class="modal-header">
+		    	<h3>{{message "lang.improve-entry.help-us"}} "{{ name.name }}"</h3>
+		    </div>
+			<form name="name_feedback" class="modal-body">
+				<div class="form-group">
+            		<p class="lead">{{message "lang.improve-entry.sub-text"}}</p>
+            		<textarea name="improveEntry" id="improveEntry" class="form-control" rows="5" required="true"></textarea>                		
+        		</div>
+        		<button type="submit" id="submitEntry" class="btn btn-success btn-lg">Submit Feedback</button>
+        		&nbsp;&nbsp;&nbsp;&nbsp;<a href="#/entries/{nameEntry}" data-dismiss="modal">Cancel</a>
+			</form>
+		</div>
+	</div>
+</div>
+<!--/Improve Entry Modal -->
 
 <!-- footer -->
 {{> footer }}
