updated about us and contact us pages

--- a/website/src/main/resources/website/contactus.hbs
+++ b/website/src/main/resources/website/contactus.hbs
@@ -13,9 +13,9 @@
        <div class="col-sm-6">
        	  <h3>Contact Information</h3>
 
-       	  <p class="lead">Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+       	  <p class="lead">We're easy to get through to, whether in person or by mail.</p>
        	  
-       	  <form class="contact">
+       	  <!--form class="contact">
 
        	  	  <div class="form-group">
        	  	  	<label class="required">Name</label>
@@ -41,12 +41,16 @@
        	  	  	<button type="submit" class="btn btn-sm btn-success">Submit Message</button>
        	  	  </div>
 
-       	  </form>
+       	  </form-->
 
-       	  <hr>
-
-       	  <h4>Alternatively</h4>
-       	  <p>You may send an email to <a href="mailto:info@yorubaname.com">info@yorubaname.com</a></p>
+       	  
+       	  <p>You may send an email to <a href="mailto:project@yorubaname.com">project@yorubaname.com</a></p>
+              <p>Or visit our office at YorubaName.com<br>
+                  2nd Floor, The Garnet Building<br>
+                  Lekki - Epe Express Road, Lekki<br>
+                  Lagos 101245<br>
+                  Nigeria
+               </p>
        </div>
    </div>
 </section>
