--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -16,27 +16,31 @@
 
        <div class="col-sm-6">
 
-       	  <h3>About the Yoruba Names Project</h3>
+       	  <h3>What is YorubaName.com?</h3>
        	  
-       	  <p class="lead">Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+       	  <p class="lead">YorubaName.com is an online intervention to preserve and document all Yorùbá names in a multimedia format. It is part of a long-term project to document all types of African cultural experiences on the internet as a way ofensuring the survival of African identities in their various expressions.</p>
        	  
-       	  <p>Nullam quis risus eget urna mollis ornare vel eu leo. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam quis risus eget urna mollis ornare vel eu leo. Vestibulum id ligula porta felis euismod semper.</p>
+       	  <p>Initially presented as a university thesis in 2005, this multimedia dictionary of Yorùbá Names found a new iteration in January 2015 as a crowdsourced platform run by volunteer language enthusiasts from around the world. It is supported by funds from hundreds of individual donors who contributed to an Indiegogo fundraising campaign that ran from January to March 2015.</p>
 
-		<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Sed posuere consectetur est at lobortis. Donec sed odio dui. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+       	  <h4>How did we go about collecting names?</h4>
 
-		<q>Curabitur blandit tempus porttitor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</q>
+		<p>All the names in this database were gathered from word of mouth, reference books, other published and unpublished materials, radio and television, the internet, family histories, and quite simply from asking every single person wemeet about their names! Field trips by volunteer linguists added an extra layer of names, meanings and sometimes elements of local history linked to the names as well.</p>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Aenean lacinia bibendum nulla sed consectetur.</p>
+		<h4>Better than a pronunciation guide: listen to the names...</h4>
 
-		<p>Maecenas faucibus mollis interdum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+		<q>The audio files attached to each name in this dictionary were generated through speech synthesis, using a technique refined and adapted by team members of the YorubaName project. </q>
 
-		<p>Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vestibulum id ligula porta felis euismod semper.</p>
+		<p>Some of the output might not be perfect at first. Our promise is to keep experimenting until we reach perfection in pronunciation: by then, this dictionary will have become a fantastic tool to teach any non-Yorùbá speaker how to correctly pronounce a Yorùbá name.</p>
 
-		<p>Maecenas faucibus mollis interdum. Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare vel eu leo. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+		<h4>Let's build up this database together</h4>
+
+		<p>Dictionary entries are dynamic, so as to allow both you, the users, and our in-house linguists to add information or correct any mistakes that may have slipped through the verification process. As a crowdsourced project, our aim is to keep improving each entry in order to preserve the integrity of the meaning of each name for our users and for future generations.</p>
+
+		<p>Ultimately, it's up to all of us to make the online dictionary of Yorùbá names an authoritative resource allowing anyone with an internet connection to explore this beautiful aspect of Yorùbá culture.</p>
 
 		<hr>
 
-		<h4>The Project Team</h4>
+		<!--h4>The Project Team</h4>
 
 		<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
 
@@ -66,8 +70,8 @@
 
 		<hr>
 
-		<h4>Join our amazing team<h4>
-		<p class="lead">Cras mattis consectetur purus sit amet fermentum. Maecenas faucibus mollis interdum.</p>
+		<h4>Join our amazing team</h4>
+		<p class="lead">Cras mattis consectetur purus sit amet fermentum. Maecenas faucibus mollis interdum.</p-->
 		<a class="btn btn-lg btn-success" href="/volunteer">Volunteer</a>
 
        </div>
