removed placeholder image on hompage

--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -88,8 +88,7 @@
             </div>
 
             <div class="row" style="margin-top:40px">
-                <div class="col-sm-4"><img class="img-responsive" src="http://placehold.it/350x150"></div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-sm-offset-2">
                     <div class="fb-page" data-href="https://www.facebook.com/YorubaNames" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/YorubaNames"><a href="https://www.facebook.com/YorubaNames">Yoruba Names Dictionary</a></blockquote></div></div>
                 </div>
                 <div class="col-sm-4">
