--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -56,25 +56,25 @@
             <div class="row">
                 
                 <div class="col-sm-4">
-            		<h3>{{message "lang.name-of-day"}}</h3>
+            		<h4>{{message "lang.name-of-day"}}</h5>
                     <hr />
-                    <h4><a href="/entries/Baratimileyi">Baratimileyi</a></h4>
+                    <h5 class="strong-text"><a href="/entries/Baratimileyi">Baratimileyi</a></h5>
                     <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
                     <a href="/entries/Baratimileyi">Read more</a>
             	</div>
 
                 <div class="col-sm-4">
-                    <h3>{{message "lang.name-of-day"}}</h3>
+                    <h4>{{message "lang.name-of-day"}}</h4>
                     <hr />
-                    <h4>Baratimileyi</h4>
+                    <h5 class="strong-text">Baratimileyi</h5>
                     <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
 
                 </div>
 
                 <div class="col-sm-4">
-                    <h3>{{message "lang.name-of-day"}}</h3>
+                    <h4>{{message "lang.name-of-day"}}</h4>
                     <hr />
-                    <h4>Baratimileyi</h4>
+                    <h5 class="strong-text">Baratimileyi</h5>
                     <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish.</p>
                 </div>
                                       
@@ -96,7 +96,7 @@
                         <h4>YorubaName Newsletter</h4>
                         <p>Get the latest entries and meanings of the most famous and not-so-famous Yoruba names.</p>
                         <div class="form-group">
-                            <input type="email" placeholder="Enter your email here" class="form-control">
+                            <input type="email" name="EMAIL" placeholder="Enter your email here" class="form-control">
                             <button class="btn btn-success"><i class="fa fa-send"></i></button>
                         </div>
                     </form>
