--- a/website/src/main/resources/public/assets/css/styles.css
+++ b/website/src/main/resources/public/assets/css/styles.css
@@ -101,8 +101,8 @@ footer {
 }
 
 header {
-	/*background-color: #0E5264;*/
-	background-color: #f2f2f2;
+	/*background-color: #0E5264;
+	background-color: #f2f2f2;*/
     color: #CDA463;
 	/*border-bottom: 1px solid #C8AD75;*/
 	padding-top: 15px;
@@ -317,19 +317,26 @@ header {
 }
 
 .llm {
-	border-radius: 2px;
+	/*border-radius: 2px;
 	background: #FBFBFB;
 	-webkit-box-shadow: 0px 0px 4px 0px rgba(50, 50, 50, 0.2);
 	-moz-box-shadow: 0px 0px 4px 0px rgba(50, 50, 50, 0.2);
-	box-shadow: 0px 0px 4px 0px rgba(50, 50, 50, 0.2);
+	box-shadow: 0px 0px 4px 0px rgba(50, 50, 50, 0.2);*/
+
+	background: #f9f9f9;
 
 	padding-top: 20px;
 	padding-bottom: 20px;
 	margin-bottom: 50px;
 }
 
+.llm hr {
+	display: none;
+}
 .llm ul {
 	list-style-type: none;
+	color:#CDA463;
+	font-weight: bold;
 	/*color: #075265;
 	/*font-size: 16px;
 	letter-spacing: 1px;*/
@@ -368,6 +375,16 @@ header {
 	bottom: 1px;
 }
 
+.share .btn {
+	color:#fff;
+}
+.search-results h4 a {
+  color:#0e5264;
+}
+
+.strong-text {
+	font-weight: bold;
+}
 footer {
 	background-color: #0e5264;
 	padding-top: 25px;
