--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -10,11 +10,9 @@
 
        <div class="row">
        
-       <div class="col-sm-3">
-       	  
-       </div>
+       
 
-       <div class="col-sm-6">
+       <div class="col-sm-6 col-sm-offset-3">
 
        	  <h3>What is YorubaName.com?</h3>
        	  
