--- a/website/src/main/resources/website/entrynotfound.hbs
+++ b/website/src/main/resources/website/entrynotfound.hbs
@@ -4,23 +4,17 @@
 {{> searchform }}
 
 <section>
-	<main>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8">			
-					<div class="well">
-						<h3 class="name sec-color">{{message "lang.entry-not-found.no-match"}} "{{ name.name }}"</h3>
-						<p class="pri-color">{{message "lang.entry-not-found.suggest-text"}}</p>
-						<hr />
-
-						{{> submitnameform }}
-					</div>
-				</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-6 col-sm-offset-3 text-center">
+			<h3 class="name sec-color">{{message "lang.entry-not-found.no-match"}} "{{ name.name }}"</h3>
+			<p class="pri-color">{{message "lang.entry-not-found.suggest-text"}}</p>
+			<hr />
+			{{> submitnameform }}
 			</div>
 		</div>
-	</main>
+	</div>
 <section>
-<!-- /main-content -->
 
 <!-- footer -->
 {{> footer }}
