--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -12,6 +12,20 @@
 <link href="/assets/css/overwrite.css" rel="stylesheet">
 <script type="text/javascript" src="http://fast.fonts.net/jsapi/6dc70f84-e724-4068-9f7a-797b1bf01ddb.js"></script>
 
+<meta property="og:title" content="YorubaNames">
+    <meta property="og:url" content="http://www.yorubaname.com">
+    <meta property="og:description" content="Over 10,000 Yoruba names and still growing...">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="/assets/img/yd-logo-brown-black.png">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="YorubaNames">
+    <meta name="twitter:url" content="http://www.yorubaname.com">
+    <meta name="twitter:description" content="Over 10,000 Yoruba names and still growing...">
+    <meta name="twitter:site" content="@Yorubanames">
+    <meta name="twitter:creator" content="@Yorubanames">
+    <meta name="twitter:image" content="/assets/img/yd-logo-brown-black.png">
+
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
