--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -6,52 +6,48 @@
 <!-- main-content -->
 <section id="content">
 	<div class="container">
-		<div class="row">
-				<div class="col-sm-8">
-				   <h2>{{ name.name }}
-						<button class="btn btn-default btn-sm" id="tts-button">
+		<div class="row search-result">
+				<div class="col-sm-6 col-sm-offset-3">
+
+				   <h2>{{ name.name }}</h2>										
+					
+					<p><strong>{{message "lang.pronounciation"}}</strong> /{{ name.pronunciation}}/ <button class="btn btn-default btn-sm" id="tts-button">
 							<i class="fa fa-volume-up" data-toggle="tooltip" data-placement="top" title="{{message "lang.play-sound"}}"></i>
 						</button>
-					</h2>										
-					
-					<p>{{message "lang.pronounciation"}} {{ name.pronunciation}}</p>
-					
 
-							
-						<a class="btn btn-sm btn-default">
-							{{message "lang.share"}} <i class="fa fa-share-alt"></i>
-						</a>
+						<span class="pull-right text-muted"><strong>{{message "lang.submitby"}}</strong> {{ name.submittedBy }}</span>
+					</p>
 
-						<a class="btn btn-sm btn-default" href="#/improve-entry" data-toggle="modal" data-target="#improveEntryModal">
-							{{message "lang.improve-entry"}} <i class="fa fa-pencil"></i>
-						</a>
-								
-								
-						<hr>
-						<p>{{message "lang.submitby"}} {{ name.submittedBy }}</p>			
-					
+					<div class="share">
 
+					<a class="btn btn-sm btn-success" href="#/improve-entry" data-toggle="modal" data-target="#improveEntryModal" style="margin-right:20px">
+						{{message "lang.improve-entry"}} <i class="fa fa-pencil"></i>
+					</a>
+
+					<span class="text-muted">{{message "lang.share"}} <i class="fa fa-share-alt"></i></span>
+
+					<a target="_blank" href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.yorubaname.com" class="btn btn-social btn-sm btn-fb btn-primary"><i class="fa fa-facebook"></i> </a>
+					<a class="btn btn-social btn-sm btn-tw btn-info" target="_blank" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fwww.yorubaname.com/entries/{{name.name}}&amp;text=Did you know {{name.name}} means {{name.meaning}}?&amp;hashtags=YorubaNames&amp;via=YorubaNames"><i class="fa fa-twitter"></i> </a>
+
+					</div>
 					
+						<br><br>
 						<h4>{{message "lang.meaningof"}} {{ name.name }}</h4>
-						<hr>
 						<p>{{ name.meaning }}</p>
 
+						<br><br>
 						<h4>{{message "lang.extendedmeaningof"}}</h4>
-						<hr>
 						<p>{{name.extendedMeaning }}</p>
 					
 					<!-- /meaning of name -->
-
+					    <br><br>
 						<h4>{{message "lang.morphology"}}</h4>
-						<hr>
 						<p>{{name.morphology}}</p>
 					
 					<!-- /morphology -->
 
-					
+					    <br><br>
 						<h4>{{message "lang.etymology"}}</h4>
-						<hr>
-			            
 			            {{#each name.etymology}}
 			               <strong>{{this.part}}</strong><span> - {{this.meaning}}</span><br>
 						{{/each}}
@@ -60,21 +56,21 @@
 					<!-- /etymology -->
 
 					
+						<br><br>
 						<h4>{{message "lang.geolocation"}}</h4>
-						<hr>
 						<p>{{message "lang.commonin"}} {{name.geoLocation.place}}</p>
 					
 					<!-- /geolocation -->
 
 					
+						<br><br>
 						<h4>{{message "lang.variants"}}</h4>
-						<hr>
+						<p>{{name.variants}}</p>
 					
 					<!-- /variants -->
 
-					
+					    <br><br>
 						<h4>{{message "lang.see-also"}}</h4>
-						<hr>
 					
 					<!-- /see also -->
 				</div>			
