--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -92,11 +92,12 @@
                     <div class="fb-page" data-href="https://www.facebook.com/YorubaNames" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/YorubaNames"><a href="https://www.facebook.com/YorubaNames">Yoruba Names Dictionary</a></blockquote></div></div>
                 </div>
                 <div class="col-sm-4">
-                    <form method="post" class="subscribe">
+                    <form method="post" class="subscribe" action="//YorubaName.us10.list-manage.com/subscribe/post?u=447ae670439b332a80e50107c&amp;id=0cfdd9d988" target="_blank">
                         <h4>YorubaName Newsletter</h4>
                         <p>Get the latest entries and meanings of the most famous and not-so-famous Yoruba names.</p>
+                        <input type="hidden" name="b_447ae670439b332a80e50107c_0cfdd9d988" tabindex="-1" value="">
                         <div class="form-group">
-                            <input type="email" name="EMAIL" placeholder="Enter your email here" class="form-control">
+                            <input type="email" name="EMAIL" placeholder="Enter your email here" class="form-control" required="required">
                             <button class="btn btn-success"><i class="fa fa-send"></i></button>
                         </div>
                     </form>
