--- a/website/src/main/resources/website/submitnameform.hbs
+++ b/website/src/main/resources/website/submitnameform.hbs
@@ -1,5 +1,6 @@
-
 <form id="suggest-form">
+
+     <div class="response"></div>
 
 	<div class="form-group">
         <label class="required">{{message "lang.submitname.entername"}}</label>
@@ -31,5 +32,5 @@
         <input type="email" name="suggestedEmail" class="form-control" id="suggestedEmail" placeholder="Your email" required="true">
     </div>
 
-    <button type="submit" id="submit-name" class="btn btn-success">Submit new name</button>
+    <button type="submit" id="submit-name" class="btn btn-success">Submit New Name</button>
 </form>
