temp commenting out the name of the day section

--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -53,32 +53,32 @@
 
     <div class="container">
     	
-            <div class="row">
-                
-                <div class="col-sm-4">
-            		<h4>{{message "lang.name-of-day"}}</h5>
-                    <hr />
-                    <h5 class="strong-text"><a href="/entries/Baratimileyi">Baratimileyi</a></h5>
-                    <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
-                    <a href="/entries/Baratimileyi">Read more</a>
-            	</div>
+            <!--<div class="row">-->
+                <!---->
+                <!--<div class="col-sm-4">-->
+            		<!--<h4>{{message "lang.name-of-day"}}</h5>-->
+                    <!--<hr />-->
+                    <!--<h5 class="strong-text"><a href="/entries/Baratimileyi">Baratimileyi</a></h5>-->
+                    <!--<p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>-->
+                    <!--<a href="/entries/Baratimileyi">Read more</a>-->
+            	<!--</div>-->
 
-                <div class="col-sm-4">
-                    <h4>{{message "lang.name-of-day"}}</h4>
-                    <hr />
-                    <h5 class="strong-text">Baratimileyi</h5>
-                    <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>
+                <!--<div class="col-sm-4">-->
+                    <!--<h4>{{message "lang.name-of-day"}}</h4>-->
+                    <!--<hr />-->
+                    <!--<h5 class="strong-text">Baratimileyi</h5>-->
+                    <!--<p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish. </p>-->
 
-                </div>
+                <!--</div>-->
 
-                <div class="col-sm-4">
-                    <h4>{{message "lang.name-of-day"}}</h4>
-                    <hr />
-                    <h5 class="strong-text">Baratimileyi</h5>
-                    <p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish.</p>
-                </div>
-                                      
-            </div>
+                <!--<div class="col-sm-4">-->
+                    <!--<h4>{{message "lang.name-of-day"}}</h4>-->
+                    <!--<hr />-->
+                    <!--<h5 class="strong-text">Baratimileyi</h5>-->
+                    <!--<p>Baratimileyi is name i made up when i went to buy mango. I don't even know hoe the remote found itself in the pot, but i think if you call me tomorrow i could tell you who won. Nawaooo you get time to read this rubbish.</p>-->
+                <!--</div>-->
+                                      <!---->
+            <!--</div>-->
 
             <div class="row">
                 <div class="col-sm-12 text-center"><h3>Our key supporters</h3></div>
