--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -9,7 +9,7 @@
             {{> searchcomponent }}
             
             <h3>{{message "lang.jumboh31"}}</h3>
-            <a href="/submitname" class="btn btn-lg btn-success">{{message "lang.jumboh32"}}</a>
+            <a href="/submitname" class="btn btn-lg btn-link">{{message "lang.jumboh32"}}</a>
        </div>
     </div>
 </section>
