made name meaning required

--- a/website/src/main/resources/website/submitnameform.hbs
+++ b/website/src/main/resources/website/submitnameform.hbs
@@ -9,8 +9,8 @@
     </div><br>
 
     <div class="form-group">
-        <label class="optional">{{message "lang.submitname.entermeaning"}}:</label>
-        <textarea name="suggestedMeaning" id="suggestedMeaning" class="form-control" rows="3"></textarea>
+        <label class="required">{{message "lang.submitname.entermeaning"}}:</label>
+        <textarea required="true" name="suggestedMeaning" id="suggestedMeaning" class="form-control" rows="3"></textarea>
     </div><br>
 
     <div class="form-group">
