--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -82,9 +82,10 @@
 
             <div class="row">
                 <div class="col-sm-12 text-center"><h3>Our key supporters</h3></div>
-                <div class="col-sm-2 col-sm-offset-3"><img class="img-responsive" src="/assets/img/supporters/capital_square.png"></div>
+                <div class="col-sm-2 col-sm-offset-2"><img class="img-responsive" src="/assets/img/supporters/capital_square.png"></div>
                 <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/goethe_institut.png"></div>
                 <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/alti.jpg"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/lgmediting-logo.png"></div>
             </div>
 
             <div class="row" style="margin-top:40px">
