--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -41,7 +41,9 @@
     <div class="preheader">
         <div class="container">
            <div class="row">
-               <div class="col-sm-4"></div>
+               <div class="col-sm-4">
+                   <a href="/"><img class="logo" src="/assets/img/yd-logo-brown-black.png" alt="YorubaName.com" title="YorubaName.com"></a>
+               </div>
                <div class="col-sm-8 text-right">
                    <nav class="social-links">
                         <a href="https://www.facebook.com/YorubaNames"><i class="fa fa-facebook"></i></a>
@@ -64,7 +66,6 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <div class="nav-brand"><a href="/"><img src="/assets/img/yd-logo-brown-black.png"  alt="YorubaName.com" title="YorubaName.com" /></a></div>
                 </div>
                  
                 <!--a class="btn btn-sm btn-primary navbar-right" href="https://indeigogo.com/">Donate</a-->                          
