added team profile

--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -12,7 +12,7 @@
        
        
 
-       <div class="col-sm-6 col-sm-offset-3">
+       <div class="col-sm-6 col-sm-offset-2">
 
        	  <h3>What is YorubaName.com?</h3>
        	  
@@ -38,42 +38,61 @@
 
 		<hr>
 
-		<!--h4>The Project Team</h4>
-
-		<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-
-		<div class="teams row">
-			<div class="col-sm-4">
-			    <div class="thumbnail">
-				<img src="http://placehold.it/300x200" class="responsive-image">
-				</div>
-				<h4>Kola T.</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-			<div class="col-sm-4">
-			    <div class="thumbnail">
-				<img src="http://placehold.it/300x200" class="responsive-image">
-				</div>
-				<h4>Dade A.</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-			<div class="col-sm-4">
-			    <div class="thumbnail">
-				<img src="http://placehold.it/300x200" class="responsive-image">
-				</div>
-				<h4>Someother P.</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			</div>
-		</div>
+		<h4>Join Our Amazing Team</h4>
+		<p class="lead">We are always on the look out for more volunteers to join our team.</p>
+		<a class="btn btn-lg btn-success" href="/volunteer">Volunteer</a>
 
 		<hr>
 
-		<h4>Join our amazing team</h4>
-		<p class="lead">Cras mattis consectetur purus sit amet fermentum. Maecenas faucibus mollis interdum.</p-->
-		<a class="btn btn-lg btn-success" href="/volunteer">Volunteer</a>
+		<p><strong>Dadepo ADÉRẸ̀MÍ</strong> was one of the first volunteers to join the team in early 2015. He is a graduate of Engineering Physics from Ọbáfẹmi Awólọ́wọ̀ University, Ilé-Ifẹ̀, and he is passionate about the role of African languages on the internet. He currently leads the Software Development team for the project, among other administrative roles. His day job is as a Software Developer at Trifork BV Netherlands.</p>
+
+		<p><strong>Dave AGBOỌLÁ</strong> is a linguist, teacher and writer with experience in research, editing and administration. He has worked as a language teacher at various levels of education, most recently at the University of Lagos in the English Department. He currently works as the Executive Assistant to the Speaker at the Lagos House of Assembly, where his sole task is to prepare speeches for the Speaker. Dave came to know about the Yoruba Name project on Twitter a couple of months ago. He has been active in the lexicography team, coming up with tone marks for some Yorùbá names and researching name variations. He blogs about language at <a href="http://languageclinic.webnode.com" target="_blank">languageclinic.webnode.com</a>.</p>
+
+		<p><strong>Adéyínká ÀJÀLÁ</strong> has always loved Yoruba Language, having a toddler and living in diaspora has further increased her passion for the language. On one of her quests for resources to teach her daughter the language, she came came across the Yoruba Names Dictionary campaign, she was so impressed by the initiative that she decided to volunteer to help with lexicography. She is devoting this season of her life to being a work from home mom to a delightful daughter while running her online weddings and events with personal shopper business. Her professional background is in IT - Application Support and Software Testing.</p>
+
+		<p><strong>For Laila LE GUEN</strong>, the Yorùbá Name dictionary was a great opportunity to engage with two things she was already drawn to: Yorùbá? language learning and expanding linguistic diversity online. She joined the project in March 2015 and she soon came to be involved in the drafting of the newsletter, blog post editing, as well as some social media interactions. She also endeavoured to bring on board Yorùbá? speakers from the Republic of Benin so as to ensure inclusive participation across borders. She hopes that this dictionary will become a multilingual reference point for anyone seeking information about Yorùbá? personal names, but also serve as an inspiration for other language communities.</p>
+
+		<p><strong>Godswill Davis KOKO</strong> is a creative systems analyst and software engineer with working experience in applications and systems development methodologies, web applications, graphics, software development, deployment and documentation systems. Driven by challenging environments that make a positive impact, he always strives to meet his desire for success through life-long learning, which allows him to develop skills and experience while gaining professional excellence. As a graphic designer, he's responsible for the visual identity of the Yoruba Name project. Koko hopes to continue making a valuable contribution to this online dictionary thanks to his dedication to beautiful, compelling designs.</p>
+
+		<p><strong>Kẹ́hìndé LÌGÁLÍ</strong> was born in Abuja, Nigeria, but she has lived in the diaspora for over 15 years. She is a final year undergraduate student at Indiana University-Bloomington, studying Psychology and African Languages. After graduation, she plans to pursue a dual graduate program in Public affairs and African Studies. Her passion for global awareness, languages and cultures led her to join the Yorùbá Names Dictionary team in March of 2015. Currently, she collaborates with other team members to develop interactive content for our social media followers. Her personal goal is for the project to reach as many individuals as possible, particularly those outside Nigeria, in an effort to preserve Yorùbá language and culture.</p>
+
+		<p><strong>Tọ́lá ODÙMÓSÙ</strong> is a software developer with experience working on projects in education technology, security and payments. He currently leads application development for desktop, mobile and web for TechyClass Ltd, a Canadian tech startup distributing educational content in Africa. He holds a B.Sc. in Electrical and Electronics Engineering, a post-graduate certificate in Computing and a Master's degree in Computer Science from Nottingham Trent University. In his free time, Tola likes to watch tech gadget reviews, read feature logs for language releases and learn new things by participating in the Yoruba Name project! More specifically, he's helped develop the dashboard admin console for content management and reporting using AngularJS/JavaScript.</p>
+
+		<p><strong>Kọ́lá TÚBỌ̀SÚN</strong> is a linguist, teacher, and writer. He holds an M.A. in Linguistics/TESL from Southern Illinois University-Edwardsville (2012) and a B.A. in Linguistics from the University of Ibadan (2005). He has previously worked as a Fulbright foreign language teacher and as an English to Yorùbá and Yorùbá to English translator. He headed the 2012 campaign to make Twitter available in Yorùbá and has been involved in other activities aimed at improving African language use on the internet. In January 2015, Kọ́lá founded YorubaName.com, a portal to document all the names in Yorùbá language. He is currently involved in lexicography on the project, among other advisory roles.</p>
+
+		<p><strong>Victor WILLIAMSON</strong> is currently a Ph.D. student in Computer Science at the University of Wisconsin-Milwaukee. His research interests are centered around the integration of black culture into computer science via multimedia on the Web. As a 2010 GEM fellow, he graduated from MIT with a Master’s degree in Computer Science with a focus on network security and web interfaces. He traveled to Ibadan, Nigeria, in the summer of 2014 to study the Yoruba language and is interested in multi-disciplinary approaches to promote and preserve African and African American heritage. Victor works in lexicography.</p>
+
+
 
        </div>
-     </div>
+
+       <div class="col-sm-3">
+
+           <br> <br>
+
+           <h4>Administration/Advisory</h4>
+
+			<p>Kọlá Túbọsún, Dadépọ̀ Adérẹ̀mí, Laila Le Guen</p>
+
+			<h4>Lexicography/Research</h4>
+
+			<p>Kọlá Túbọsún, Laila Le Guen, Victor Williamson</p>
+
+			<h4>Design, UX and Software</h4>
+
+			<p>Dadépọ̀ Adérẹ̀mí, Tọ́lá Odùmósù, Esther Olátúndé, Goodswill Koko</p>
+
+			<h4>Web, PR</h4>
+
+			<p>Laila Le Guen, Kẹ́hìndé Lìgálí</p>
+
+			<h4>Others/Data Check</h4>
+
+			<p>Adéyínká Ajàlà, Dave Agboọlá, Luis Morais</p>
+       	
+       </div>
+
+    </div>
    </div>
    
 </section>
