listing profile instead

--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -72,23 +72,23 @@
 
            <h4>Administration/Advisory</h4>
 
-			<p>Kọlá Túbọsún, Dadépọ̀ Adérẹ̀mí, Laila Le Guen</p>
+			<p>Kọlá Túbọsún<br> Dadépọ̀ Adérẹ̀mí<br> Laila Le Guen</p>
 
 			<h4>Lexicography/Research</h4>
 
-			<p>Kọlá Túbọsún, Laila Le Guen, Victor Williamson</p>
+			<p>Kọlá Túbọsún<br> Laila Le Guen<br> Victor Williamson</p>
 
 			<h4>Design, UX and Software</h4>
 
-			<p>Dadépọ̀ Adérẹ̀mí, Tọ́lá Odùmósù, Esther Olátúndé, Goodswill Koko</p>
+			<p>Dadépọ̀ Adérẹ̀mí<br> Tọ́lá Odùmósù<br> Esther Olátúndé<br> Goodswill Koko</p>
 
 			<h4>Web, PR</h4>
 
-			<p>Laila Le Guen, Kẹ́hìndé Lìgálí</p>
+			<p>Laila Le Guen<br> Kẹ́hìndé Lìgálí</p>
 
 			<h4>Others/Data Check</h4>
 
-			<p>Adéyínká Ajàlà, Dave Agboọlá, Luis Morais</p>
+			<p>Adéyínká Ajàlà<br> Dave Agboọlá<br> Luis Morais</p>
        	
        </div>
 
