Updated the tts files with latest vowel files

--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -9,7 +9,7 @@
 		<div class="row search-result">
 				<div class="col-sm-6 col-sm-offset-3">
 
-				   <h2>{{ name.name }}</h2>										
+				   <h2 id="name-entry">{{ name.name }}</h2>
 					
 					<p><strong>{{message "lang.pronounciation"}}</strong> /{{ name.pronunciation}}/ <button class="btn btn-default btn-sm" id="tts-button">
 							<i class="fa fa-volume-up" data-toggle="tooltip" data-placement="top" title="{{message "lang.play-sound"}}"></i>
