--- a/website/src/main/resources/public/assets/css/styles.css
+++ b/website/src/main/resources/public/assets/css/styles.css
@@ -62,6 +62,7 @@ FF Meta W07 | 400,700
 body {
 	font-family: 'FF Meta W07';
 	font-weight: 400;
+	background-color: #f2f2f2;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -94,7 +95,6 @@ footer {
 /* SECTION 3: Layouts */
 
 .preheader {
-	background-color: #ffffff;
 	padding-top:15px;
 	padding-bottom: 10px;
 	color: #CDA463;
@@ -300,13 +300,12 @@ header {
 
 .social-links a {
     display: inline-block;
+	color:#333;
     text-align: center;
-    border-radius: 32px;
     width: 32px;
     height: 32px;
     line-height: 32px;
-    background: #CDA463;
-    margin-left: 10px;
+    margin-left: 0px;
 }
 
 .llm {
