--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -1,13 +1,13 @@
 <!-- Header -->
 {{> header }}
 
-{{> searchform }}
+{{> minisearchform }}
 
 <!-- main-content -->
 <section id="content">
 	<div class="container">
 		<div class="row search-result">
-				<div class="col-sm-6 col-sm-offset-3">
+				<div class="col-sm-6">
 
 				   <h2 id="name-entry">{{ name.name }}</h2>
 					
