--- a/website/src/main/resources/website/footer.hbs
+++ b/website/src/main/resources/website/footer.hbs
@@ -5,7 +5,7 @@
 	  	<p>Copyright &copy; 2015. YorubaName.com</p></div>
 	  	<div class="col-sm-8 text-right">
 	    <a href="/">{{message "lang.home"}}</a><a href="/about-us">{{message "lang.about"}}</a><a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story" target="_blank">{{message "lang.donate"}}</a><a href="/volunteer">{{message "lang.volunteer"}}</a><a href="blog.yorubaname.com" target="_blank">{{message "lang.blog"}}</a><a href="/contact-us">{{message "lang.contact"}}</a></div>
-	    <div class="col-sm-12"><div id="host">{{ host }}</div></div>
+	    <div style="visibility: hidden"><div id="host">{{ host }}</div></div>
 	  </div>
 	</div>
 </footer>
