--- a/website/src/main/resources/website/searchresults.hbs
+++ b/website/src/main/resources/website/searchresults.hbs
@@ -1,14 +1,14 @@
 <!-- Header -->
 {{> header }}
 
-{{> searchform }}
+{{> minisearchform }}
 
 <!-- main-content -->
 <section id="content">
     <div class="container">
         <div class="row">
             
-            <div class="col-sm-6 col-sm-offset-3 search-results">
+            <div class="col-sm-6 search-results">
 
                 <h4>{{message "lang.entryfoundfor"}} <strong><i>{{query}}</i></strong></h4>
 
