--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -7,7 +7,7 @@
 <section id="content">
 	<div class="container">
 		<div class="row search-result">
-				<div class="col-sm-6">
+				<div class="col-sm-7 entry">
 
 				   <h2 id="name-entry">{{ name.name }}</h2>
 					
@@ -73,8 +73,7 @@
 						<h4>{{message "lang.see-also"}}</h4>
 					
 					<!-- /see also -->
-				</div>			
-
+				</div>
 			<!-- sidebar -->
 			<aside>
 				<div class="col-md-4">
