--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -4,7 +4,7 @@
 <section id="searchform">
     <div class="jumbotron" id="home-banner">
        <div class="container">
-       		<h1>{{message "lang.jumbotron1"}} <span>10,000</span> {{message "lang.jumbotron2"}}</h1>
+       		<h1>{{message "lang.jumbotron1"}} <span>{{nameCount}}</span> {{message "lang.jumbotron2"}}</h1>
        		
             {{> searchcomponent }}
             
@@ -19,30 +19,30 @@
     <div class="container">
 		
     	<div class="llm row">
-        	<div class="col-sm-4">              	
+        	<div class="col-sm-4" id="recent_searches">
                 <ul>
                     <li><h5>{{message "lang.latest-search"}}</h5></li>
                     <hr />
                     {{#each latestSearches}}
-                        <li><a href="/entries/{{this}}">{{this}}</a></li>
+                        <li class="recent_entry"><a href="/entries/{{this}}">{{this}}</a></li>
                     {{/each}}
                 </ul>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4" id="recent_additions">
                 <ul>
                     <li><h5>{{message "lang.latest-add"}}</h5></li>
                     <hr />
                     {{#each latestAdditions}}
-                        <li><a href="/entries/{{this}}">{{this}}</a></li>
+                        <li class="recent_entry"><a href="/entries/{{this}}">{{this}}</a></li>
                     {{/each}}
                 </ul>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4" id="recent_popular">
             	<ul>
                     <li><h5>{{message "lang.most-popular"}}</h5></li>
                     <hr />
                     {{#each mostPopular}}
-                        <li><a href="/entries/{{this}}">{{this}}</a></li>
+                        <li class="recent_entry"><a href="/entries/{{this}}">{{this}}</a></li>
                     {{/each}}
                 </ul>
             </div>
