made frontend more responsive on mobile

--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -84,7 +84,7 @@
                 <div class="col-sm-12 text-center"><h3>Our key supporters</h3></div>
                 <div class="col-sm-2 col-sm-offset-2"><img class="img-responsive" src="/assets/img/supporters/capital_square.png"></div>
                 <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/goethe_institut.png"></div>
-                <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/alti.jpg"></div>
+                <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/alti.png"></div>
                 <div class="col-sm-2"><img class="img-responsive" src="/assets/img/supporters/lgmediting-logo.png"></div>
             </div>
 
