--- a/website/src/main/resources/public/assets/css/styles.css
+++ b/website/src/main/resources/public/assets/css/styles.css
@@ -62,17 +62,13 @@ FF Meta W07 | 400,700
 body {
 	font-family: 'FF Meta W07';
 	font-weight: 400;
+	color:#444;
 	background-color: #f2f2f2;
 }
 
 h1,h2,h3,h4,h5,h6 {
 	font-family: 'Brandon Grotesque W01';
 	font-weight: 500;
-}
-
-.preheader {
-	font-family: 'FF Meta W01';
-	font-weight: 200;
 }
 
 .jumbotron h1 {
@@ -94,17 +90,8 @@ footer {
 
 /* SECTION 3: Layouts */
 
-.preheader {
-	padding-top:15px;
-	padding-bottom: 10px;
-	color: #CDA463;
-}
-
 header {
-	/*background-color: #0E5264;
-	background-color: #f2f2f2;*/
     color: #CDA463;
-	/*border-bottom: 1px solid #C8AD75;*/
 	padding-top: 15px;
 	padding-bottom: 25px;
 }
@@ -114,7 +101,11 @@ header {
     margin-bottom: 0px;
 }
 
-.preheader .container img.logo {
+.navbar-brand {
+	padding:0;
+}
+
+header .container img.logo {
     width: 215px;
     height: 60px;
 }
@@ -132,14 +123,12 @@ header {
 
 
 .jumbotron {
-	background: #F2F2F2;
-	color: #000;
+	background: #F2F2F2 no-repeat center center;
+	color: #fff;
 	text-align: center;
 }
 
 .jumbotron.mini {
-	background: #F2F2F2;
-	color: #000;
 	text-align: left !important;
 }
 
@@ -147,7 +136,7 @@ header {
 	font-size: 48px;
 	font-weight: 200;
 	margin-bottom: 20px;
-	text-shadow: 1px 1px 1px rgba(0,0,0,80%);
+	text-shadow: 1px 0 1px #000;
 }
 .jumbotron h3 {
 	font-size: 21px;
@@ -172,7 +161,7 @@ header {
 }
 
 #home-banner {
-    background-size:100%;
+    background-size:cover;
     width:100%;
     -webkit-user-select: none;
 	-khtml-user-select: none;
@@ -302,12 +291,12 @@ header {
 .social-links {
   font-size: 20px;
   display: inline-block;
-  color: #fff;
+  margin-top: 10px;
 }
 
 .social-links a {
     display: inline-block;
-	color:#333;
+	color:#cda463;
     text-align: center;
     width: 32px;
     height: 32px;
@@ -373,11 +362,10 @@ header {
 	font-weight: bold;
 }
 footer {
-	/*background-color: #0e5264;*/
 	padding-top: 25px;
 	padding-bottom: 30px;
 	margin-top: 50px;
-	/*color:#cda463;*/
+	color:#cda463;
 	font-size: 14px;
 }
 
@@ -392,13 +380,48 @@ footer a + a {
 }
 
 @media (max-width: 767px) {
+	header {
+		border-bottom: solid 1px #c8ad75;
+		background: #fff;
+		padding-bottom: 15px;
+	}
+	header .container img.logo {
+		width: 107.5px;
+		height: 30px;
+	}
+	.navbar-toggle {
+		background-color: #c8ad75;
+		margin-right: 0;
+		border-color: #c8ad75;
+	}
+	.navbar-toggle .icon-bar {
+		border:solid 1px #fff;
+	}
+	.navbar-collapse {
+		text-align: center;
+	}
+	.search-input {
+		display: block;
+	}
 	.search-input input {
-		width: 400px;
+		width: 100%;
+	}
+	.th, .th-query {
+		width: auto;
+	}
+	.tt-menu {
+		width: auto;
 	}
 }
 
 @media (max-width: 480px) {
 	.search-input input {
-		width: 150px;
+		width: 100%;
+	}
+	.th, .th-query {
+		width: auto;
+	}
+	.tt-menu {
+		width: auto;
 	}
 }
