--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" name="generator, viewport" content="YorubaName, width=device-width, initial-scale=1, maximum-scale=1" />
-<title>{{ title }} - YorubaName</title>
-<link href="/assets/img/favicon.png" rel="shortcut icon">
-<link href="/assets/css/bootstrap.css" rel="stylesheet">
-<link href="/assets/css/styles.css" rel="stylesheet">
-<link href="/assets/css/jquery-ui.min.css" rel="stylesheet">
-<link href="/assets/css/keyboard.css" rel="stylesheet">
-<link href="/assets/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<link href="/assets/css/overwrite.css" rel="stylesheet">
-<script type="text/javascript" src="http://fast.fonts.net/jsapi/6dc70f84-e724-4068-9f7a-797b1bf01ddb.js"></script>
+    <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
+    <title>{{ title }} - YorubaName</title>
+    <link href="/assets/img/favicon.png" rel="shortcut icon">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/styles.css" rel="stylesheet">
+    <link href="/assets/css/jquery-ui.min.css" rel="stylesheet">
+    <link href="/assets/css/keyboard.css" rel="stylesheet">
+    <link href="/assets/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/assets/css/overwrite.css" rel="stylesheet">
+    <script type="text/javascript" src="http://fast.fonts.net/jsapi/6dc70f84-e724-4068-9f7a-797b1bf01ddb.js"></script>
 
-<meta property="og:title" content="YorubaNames">
+    <meta property="og:title" content="YorubaNames">
     <meta property="og:url" content="http://www.yorubaname.com">
     <meta property="og:description" content="Over 10,000 Yoruba names and still growing...">
     <meta property="og:type" content="website">
@@ -26,38 +26,24 @@
     <meta name="twitter:creator" content="@Yorubanames">
     <meta name="twitter:image" content="/assets/img/yd-logo-brown-black.png">
 
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
-{{> scriptIncludes }}
+    {{> scriptIncludes }}
 
-<title>{{ title }}</title>
+    <title>{{ title }}</title>
 
 </head>
 
 <body>
-    <div class="preheader">
-        <div class="container">
-           <div class="row">
-               <div class="col-sm-4">
-                   <a href="/"><img class="logo" src="/assets/img/yd-logo-brown-black.png" alt="YorubaName.com" title="YorubaName.com"></a>
-               </div>
-               <div class="col-sm-8 text-right">
-                   <nav class="social-links">
-                        <a href="https://www.facebook.com/YorubaNames"><i class="fa fa-facebook"></i></a>
-                        <a href="https://twitter.com/YorubaNames"><i class="fa fa-twitter"></i></a>
-                    </nav>
-               </div>
-               
-           </div>
-        </div>
-    </div>
-
 	<!-- Header -->
     <header>
     	<div class="container">
+
+            <div class="navbar-brand"><a href="/"><img class="logo" src="/assets/img/yd-logo-brown-black.png" alt="YorubaName.com" title="YorubaName.com"></a></div>   
+
             <div id="layout-nav" class="navbar" role="navigation">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
@@ -71,7 +57,7 @@
                 <!--a class="btn btn-sm btn-primary navbar-right" href="https://indeigogo.com/">Donate</a-->                          
                 <div class="collapse navbar-collapse navbar-main-collapse">
                     <ul class="nav navbar-nav navbar-right">   
-                        <!--li><a href="/">{{message "lang.home"}}</a></li-->
+                        <li><a href="/">{{message "lang.home"}}</a></li>
                         <li><a href="/about-us">{{message "lang.about"}}</a></li>
                         <li><a href="/volunteer">{{message "lang.volunteer"}}</a></li>
                         <li><a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story" target="_blank">{{message "lang.donate"}}</a></li>
@@ -79,9 +65,12 @@
                         <!--li><a href="/login">{{message "lang.logreg"}}</a></li-->
                         <li><a href="/contact-us">{{message "lang.contact"}}</a></li>
                     </ul>
+                    <nav class="social-links">
+                        <a href="https://facebook.com/YorubaNames" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="https://twitter.com/YorubaNames" target="_blank"><i class="fa fa-twitter"></i></a>
+                    </nav>
                 </div>
-                
-            </div>                    
+            </div>
    		</div>
    </header>
    <!-- /header -->
