--- a/website/src/main/resources/website/rsidebar.hbs
+++ b/website/src/main/resources/website/rsidebar.hbs
@@ -3,7 +3,7 @@
         <li><h5>{{message "lang.most-popular-names"}}</h5></li>
         <hr />
         {{#each mostPopular}}
-            <li><a href="/entries/{{this}}">{{this}}</a></li>
+            <li class="intonation"><a href="/entries/{{this}}">{{this}}</a></li>
         {{/each}}
     </ul>
 </div>
