Use Arial font for texts with intonation marks

--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -41,7 +41,7 @@
 					
 					<!-- /meaning of name -->
 					    <br><br>
-						<h4>{{message "lang.morphology"}}</h4>
+						<h4 class="intonation">{{message "lang.morphology"}}</h4>
 						<p>{{name.morphology}}</p>
 					
 					<!-- /morphology -->
